# Point

./: README.md  main.py  pyproject.toml
resources/data/: saves.json
resources/dialogs/: storyteller.json  the_battle_to_the_death.json
resources/maps/: first_platformer  start_map
